[tool.poetry]
name = "questions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
email-validator = "^1.2.1"
Jinja2 = "^3.1.2"
requests = "^2.28.1"
simpleeval = "^0.9.12"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
Flask = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
