[tool.poetry]
name = "questions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "*"
email-validator = "^1"
Jinja2 = "^3"
requests = "^2"
simpleeval = "^*"
typing-extensions = "^4"

[tool.poetry.dev-dependencies]
Flask = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
